@@ -103,6 +103,16 @@ fi
 ( alias :pr=print) 2> /dev/null || err_exit 'alias beginning with : fails'
 ( alias p:r=print) 2> /dev/null || err_exit 'alias with : in name fails'
 
-unalias no_such_alias &&  err_exit 'unalias should return non-zero for unknown alias'
+unalias no_such_alias && err_exit 'unalias should return non-zero for unknown alias'
 
+# ======
+# Attempting to unalias a previously set alias twice should be an error
+alias foo=bar
+unalias foo
+unalias foo && err_exit 'unalias should return non-zero when a previously set alias is unaliased twice'
+
+# Removing a predefined alias should work without an error from free(3)
+$SHELL -c 'unalias history' 2> /dev/null || err_exit 'removing a predefined alias does not work'
+
+# ======
 exit $((Errors<125?Errors:125))
